	  key entries if those entries exist, and if there's only one
	  entry left but there's room for more than one, add enough tabs
	  to put that entry at the end.  These changes allow e.g. the
	  miscellaneous meta key sequence to be displayed in a shortcut
	  that has a control key, a primary meta key sequence, and a
	  miscellaneous meta key sequence, but no function key. (DLR)
  do_int_spell_fix()
	- Move the REVERSE_SEARCH flag toggling into the NANO_SMALL
	  #ifdef, since the tiny version of nano doesn't support reverse
	  searching.  Move the CASE_SENSITIVE flag toggling out in order
	  to allow the internal spell checker to work properly when
	  NANO_SMALL is defined and DISABLE_SPELLER isn't.  Also, turn
	  the USE_REGEXP flag off during spell checking in order to
	  avoid a potential segfault. (DLR)
  do_alt_speller()
	- Call terminal_init() unconditionally after running the
	  alternate spell checker, so that the terminal state is
	  properly restored in all cases. (DLR)
  justify_format()
	- For more compatibility with Pico, remove extra space after a
	  character in punct if that character is the same as the one
	  before it.  For example, with the default values of punct and
	  brackets, only one space will be left after "...". (DLR)
  do_para_begin(), do_para_end()
	- Maintain current_y's value when moving up or down lines so
	  that smooth scrolling works correctly. (DLR)
  breakable(), break_line()
	- Make goal a ssize_t instead of an int, since fill is now a
	  ssize_t, and the position at which a line is broken can be
	  greater than COLS. (DLR)
- nano.h:
	- Add WIDTH_OF_TAB #define, containing the default width of a
	  tab. (DLR)
- rcfile.c:
  parse_rcfile()
	- Add missing brackets around an if statement block so that
	  parsing the numeric argument after "tabsize" works properly
	  again. (DLR, found by Mike Frysinger)
	- Since flag values are longs, use "%ld" instead of "%d" in the
	  debugging messages indicating when a flag is set or unset.